--- a/www/css/main.css
+++ b/www/css/main.css
@@ -3,7 +3,23 @@ html, body {
   padding: 0px;
 }
 
-.logo {
-  font-family: 'Jua', sans-serif;
-  font-size: 45px;
+.img-thumb {
+  width: 100%;
+  height: auto;
+}
+
+.title {
+  font-family: "Jua", Arial, Helvetica, sans-serif;
+  font-size: 4vh;
+  padding: 5px 5px;
+
+  width: 100%;
+  height: 7vh;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+}
+
+.description {
+  word-break: normal;
 }
